<resources>
    <string name="app_name">ຄວທ</string>
    <string name="title_home">ໜ້າລັກ</string>
    <string name="title_dashboard">ກ່ຽວກັບຄະນະ</string>
    <string name="title_notifications">ຂໍ້ມູນ</string>
    <string name="serch"></string>
    <string name="Phone">ເບີ:</string>
    <string name="email">ອີເມວ:</string>
    <string name="birth">ວັນເດືອນປີເກີດ:</string>
    <string name="sakham">ສາຂາ</string>
    <string name="Password">ລະຫັດ</string>
    <string name="RePassword">ຢືນຍັນລະຫັດ</string>
    <string name="year">ບ່ອນນີ້ໃຫ້ປ້ອນສອງຕົວເລກໄປກອນ</string>
    <string name="register">ລົງທະບຽມ</string>
    <string name="cancel">ລົງຊື່ເຂົ້າໃຊ້</string>
    <string name="username">ຊື່</string>
    <string name="userid">ID ຜູ້ໃຊ້</string>
    <string name="title">ປະຫວັດຫຍໍ້</string>
    <string name="explain">ມະຫາວິທະຍາໄລແຫ່ງຊາດ (ມຊ) ເປັນມະຫາວິທະຍາໄລເຕັມຮູບແບບແຫ່ງທຳອິດໃນປະຫວັດສາດຂອງຊາດລາວ ໄດ້ຮັບການສ້າງຕັ້ງຂຶ້ນ ໃນວັນທີ 5 ພະຈິກ 1996 ຕາມດຳລັດຂອງນາຍົກລັດຖະມົນຕີ ສະບັບເລກທີ 50/ນຍ, ລົງວັນທີ 09/06/1995, ໂດຍການເຕົ້າໂຮມເອົາບັນດາສະຖາບັນການສຶກສາຊັ້ນສູງ ເຊິ່ງເມື່ອກ່ອນຂຶ້ນກັບຫຼາຍກະຊວງ ເຂົ້າເປັນມະຫາວິທະຍາໄລແຫ່ງຊາດ. ບັນດາສະຖາບັນການສຶກສາດັ່ງກ່າວ ປະກອບດ້ວຍ 10 ສະຖາບັນ ຄື: ມະຫາວິທະຍາໄລສ້າງຄູວຽງຈັນ, ມະຫາວິທະຍາໄລສັບພະວິຊາ 2 ທັນວາ, ມະຫາວິທະຍາໄລວິທະຍາສາດສາທາລະນະສຸກ, ໂຮງຮຽນກະເສດຊັ້ນສູງນາບົງ, ໂຮງຮຽນປ່າໄມ້ຊັ້ນສູງດົງໂດກ, ໂຮງຮຽນຊົນລະປະທານຊັ້ນສູງຕາດທອງ, ໂຮງຮຽນກໍ່ສ້າງເຄຫະສະຖານຊັ້ນສູງ, ໂຮງຮຽນຄົມມະນາຄົມຂົນສົ່ງຊັ້ນສູງ, ໂຮງຮຽນການຊ່າງຊັ້ນສູງໄຟຟ້າເອເລັກໂຕຣນິກ ແລະ ສູນກຽມສ້າງຕັ້ງມະຫາວິທະຍາໄລກະສິກຳ-ປ່າໄມ້ເວີນຄຳ.

ນັບແຕ່ນັ້ນມາ ມະຫາວິທະຍາໄລແຫ່ງຊາດ ໄດ້ດຳເນີນວຽກງານການຄຸ້ມຄອງ-ບໍລິຫານແລະ ຈັດການຮຽນການສອນຢ່າງເປັນລະບົບ. ໃນເບື້ອງຕົ້ນ ມຊ ມີ 7 ຄະນະວິຊາ, 6 ຫ້ອງການແລະ ວິທະຍາໄລວິທະຍາສາດພື້ນຖານ. ຈາກນັ້ນມາກໍໄດ້ມີການສ້າງຕັ້ງຄະນະວິຊາ, ສະຖາບັນ,
ຫ້ອງການ, ສູນ, ໂຮງໝໍວິທະຍາເຂດ ແລະ ໂຮງຮຽນ ປະຖົມສົມບູນ ແລະ ມັດທະຍົມ ສົມບູນສາທິດ. ມາຮອດສົກສຶກສາ2016-2017 ມຊ ປະກອບມີ 13 ຄະນະວິຊາ, 2 ສະຖາບັນ, 11 ຫ້ອງການ, 1 ຫໍສະໝຸດກາງ, 3 ສູນ,1 ໂຮງໝໍວິທະຍາເຂດດົງໂດກ ແລະ ໂຮງຮຽນພອນສະຫວັນ ແລະ ຊົນເຜົ່າກຽມມະຫາວິທະຍາໄລ.

The National University of Laos (NUOL) is the first comprehensiveor full-fledged university in the history of Lao PDR. Since its establishmenton November, 5th 1996, in accordance with the Prime Minister’s Decree No. 50/PM, dated June, 9th 1995, the NUOL was established byamalgamation of the existing higher education institutions which werethen operated under different ministries. It comprises of 10 institutions namely: the Pedagogical University of Vientiane, Polytechnic University, Medical Science University, Nabong College of Agriculture, Dongdok College of Forestry, Tadthong College of Irrigation, Institute of Architecture, Institute of Transportation, College of Electricity and Electronics and the Centre for Establishment of Veunkham Agro-Forestry University.

Initially, the NUOL conducted the teaching and learning-based activities starting with 7 faculties, 6 Offices and one School of Foundation Studies. After that faculties, institutes, Centes and campus hospital 1. Sathit Primary
School and Sathit Secondary School were established. Currently, 2016-2017 the NUOL is comprised of 13 faculties, 2 institutes, 1 central library, 3centers, 1 hospital, 11 offices, and 1 School for Gifted and Ethnic Students.</string>
    <string name="structture">ໂຄງຮ່າງການຈັດຕັ້ງຄະນະນຳ ມະຫາວິທະຍາໄລແຫ່ງຊາດ</string>
    <string name="vivion">ວິໄສທັດ - Vision</string>
    <string name="descript_vision">ມະຫາວິທະຍາໄລແຫ່ງຊາດກາຍເປັນສູນກາງການສຶກສາຊັ້ນສູງລະດັບຊາດ ທີ່ມີຄວາມເຂັ້ມແຂງ, ທັນສະໄໝ, ນໍາໜ້າທາງດ້ານວິຊາການ ແລະ ການຄົ້ນຄວ້າວິທະຍາສາດ ແລະ ເຕັກໂນໂລຊີຢູ່ ສປປ ລາວ, ມີມາຕະຖານທຽບເທົ່າກັບພາກພື້ນ ແລະ ສາກົນ, ເປັນບ່ອນກໍ່ສ້າງຊັບພະຍາກອນມະນຸດໃຫ້ມີຄວາມຮູ້, ມີຄວາມສາມາດ, ມີຄຸນສົມບັດ, ຈະລິຍະທໍາ ແລະ ຄວາມສີວິໄລທາງດ້ານຈິດໃຈເພື່ອຕອບສະໜອງນັກວິຊາການທີ່ມີຄຸນນະພາບ ໃຫ້ແກ່ການພັດທະນາເສດຖະກິດ-
ສັງຄົມຂອງຊາດ ແລະ ເຊື່ອມໂຍງກັບພາກພື້ນ ແລະ ສາກົນ.

The NUOL is to be the center of excellence in higher education, research and cultural preservation and contribute to capacity building,to the strengthening of human resources through fostering intellectualvitality, promoting knowledge and skills, positive attitudes, loyalty, dignity, good physical and mental health. One of the aims is to make out of the university’s graduates most-sought for manpower by the country’s and, at large, the region’s most demanding employers and to enable them to
11 become accomplished professionals</string>
    <string name="mission">ພາລະບົດບາດ - Mission</string>
    <string name="descript_mission">ມະຫາວິທະຍາໄລແຫ່ງຊາດ ມີພາລະກິດ, ພາລະບົດບາດຫຼັກດັ່ງນີ້:

ສະໜອງການສຶກສາລະດັບອະນຸປະລິນຍາ, ປະລິນຍາຕີ ແລະ ຫຼັງປະລິນຍາຕີເພື່ອກໍ່ສ້າງແລະ ພັດທະນາຊັບພະຍາກອນມະນຸດໃນສາຂາວິຊາຕ່າງໆ ຕອບສະໜອງໄດ້ທັງປະລິມານ ແລະ ຄຸນນະພາບໃຫ້ແກ່ສັງຄົມ.
ຈັດຕັ້ງການຄົ້ນຄວ້າວິທະຍາສາດສາຂາຕ່າງໆ ພ້ອມທັງເຜີຍແຜ່ຜົນຂອງການຄົ້ນຄວ້າວິທະຍາສາດ ທີ່ມີຜົນປະໂຫຍດແກ່ການພັດທະນາເສດຖະກິດ-ສັງຄົມ.
ຈັດຕັ້ງການໃຫ້ບໍລິການທາງດ້ານວິຊາການແກ່ສັງຄົມ.
ປົກປັກຮັກສາ ແລະ ເສີມຂະຫຍາຍສິລະປະ ວັດທະນະທຳ ແລະ ຮີດຄອງປະເພນີອັນດີງາມຂອງຊາດ ຂອງປະຊາຊົນບັນດາເຜົ່າ ຄຽງຄູ່ໄປກັບການສຶກສາຮຽນຮູ້ແລກປ່ຽນ ແລະ ຮັບເອົາວັດທະນະທຳສາກົນຢ່າງມີການເລືອກເຟັ້ນ.
ປະຕິບັດພາລະໜ້າທີ່ອື່ນໆ ຕາມການມອບໝາຍຂອງກະຊວງສຶກສາທິການ ແລະ ກີລາ ແລະ ລັດຖະບານ.
The NUOL’s mission is to meet Laos’ development in a suitable, efficient and equitable manner. It can be categorized as follows:

To create and provide training and thus contribute to the development of the country’s human resources. Students are to acquire knowledge and to receive training so as to become academicians, administrators or researchers equipped with high knowledge, skills, expertise, and anoverall ability to innovate as well as a solid moral background;
To conduct and promote, alongside regular curriculum, research so as to buttress the country’s economic and social development;
To disseminate research findings and provide academic and technical services to society in an efficient way; and
To preserve and expand the arts, culture and traditions of our multiethnic nation, while acknowledging and respecting world culture.</string>
    <string name="faculty">ຄະນະ ວິທະຍາສາດ ທຳມະຊາດ</string>
    <string name="major">"ພາກວິຊາຮຽນມີທັງໝົດ 5 ພາກ ແລະ 1 ສູນຄື:"\n

"1. ພາກວິຊາ ຊີວະ​ວິທະຍາ"\n

"2. ພາກວິຊາ​ ເຄມີ​ສາດ"\n

"3. ພາກວິຊາ ຟີ​ຊິກ​ສາດ"\n

"4. ພາກວິຊາ ຄະນິດສາດ"\n

"5. ພາກວິຊາ ວິທະຍາສາດ​ຄອມ​ພີ​ວ​ເຕີ"\n

"6. ສູນວິທະຍາສາດການສຶກສາ ລາວ-ສິງກະໂປ ເຈເນຕິກ"</string>
    <string name="computer">ພາກວິຊາ ວິທະຍາສາດ​ຄອມ​ພີ​ວ​ເຕີ</string>
    <string name="de_computer"> 1.ສາຂາພັດທະນາໂປຼແກຣມ\n
                                2.ສາຂາພັດທະນາເວບໄຊ\n
                                3.ສາຂາວິທະຍາສາດຄອມພິວເຕີ\n</string>
    <string name="chemmistry">ພາກວິຊາ​ ເຄມີ​ສາດ</string>
    <string name="de_ch">1.ສາຂາ ເຄມີສາດ  \n
                           2.ສາຂາ ເຄມີສິ່ງແວດລອ້ມ   \n
                              3.ສາຂາ ວັດສະດຸສາດ  \n
                                  </string>
    <string name="math">ພາກວິຊາ ຄະນິດສາດ</string>
    <string name="de_math">1.ສາຂາ ຄະນິດສາດການນຳໄຊ້ສຳລັບເສດຖະສາດ ແລະ ບໍລິຫານ  \n
                            2.ສາຂາ ສະຕິທິ  \n
                              3.ສາຂາ ຄະນິດສາດ  \n
                               </string>
    <string name="bio">ພາກວິຊາ ຊີວະ​ວິທະຍາ</string>
    <string name="de_bio">1.ສາຂາ ຊີວະ​ວິທະຍາ  \n
                            2.ສາຂາີຊວະທ່ົວໄປ   \n
                              3.ສາຂາ ເຕັກໂນໂລຊີວະພາກ   \n</string>
    <string name="ph">ພາກວິຊາ ຟີ​ຊິກ​ສາດ</string>
    <string name="de_ph">1.ສາຂາ ຟິຊິກສາດ   \n
                            2.ສາຂາ ຟິຊິກນິວເຄຼຍ   \n
                              3.ສາຂາ ທໍລະນິຟິຊິກນຳໃຊ້  \n
                                 </string>
    <string name="qhiastxiv">
        ເມື່ອຮຽນຈົບບັນດາຫຼັກສູດທີ່ໄດ້ກ່າວມາຂ້າງເທິງນີ້ສາມາດໄປສະໝັກເຮັດວຽກນໍາພາກລັດ,
        ລັດວິສະຫະກິດ, ບໍລິສັດເອກະຊົນ ຫຼື ເຮັດທຸລະກິດສ່ວນຕົວໄດ້ ຊຶ່ງໃນປັດຈຸບັນນີ້ສັງຄົມຍັງມີຄວາມຕ້ອງການຫຼາຍ,
        ສ່ວນບຸກຄົນໃດຕ້ອງການທີ່ຈະຮຽນຕໍ່ປະລິນຍາໂທ ແລະ ປະລິນຍາເອກ ກໍສາມາດຮຽນຕໍ່ໄດ້ທັງຢູ່ພາຍໃນ ແລະ ຕ່າງປະເທດ.

    </string>
    <string name="tsi">"ລາຍລະອຽດຕາມຂັ້ນເທິງນັ້ນ
        "</string>
    <string name="newp">ໃນຕອນເຊົ້າ ວັນທີ 2 ກຸມພາ 2021 ຜ່ານມານີ້, ມະຫາວິທະຍາໄລແຫ່ງຊາດ(ມຊ)
        ໄດ້ຈັດກອງປະຊຸມສ່ອງແສງ ປະຈໍາເດືອນກຸມພາ ຂຶ້ນທີ່ ຫ້ອງປະຊຸມ ສະຖາບັນພັດທະນາຊັບພະຍາກອນມະນຸດ ລາວ-ຢີປຸ່ນ,
        ພາຍໃຕ້ການເປັນປະທານຂອງທ່ານ ສຈ. ປອ. ສົມສີ ຍໍພັນໄຊ ອະທິການບໍດີ ມຊ, ມີບັນດາທ່ານ ຮອງອະທິການບໍດີ, ຄະນະບໍດີ-ຮອງຄະນະບໍດີ,
        ຫົວໜ້າຫ້ອງການ-ຮອງຫົວໜ້າຫ້ອງການ, ຜູ້ອໍານວຍການສະຖາບັນ, ສູນ, ຫໍສະໝຸດກາງ, ໂຮງໝໍ, ໂຮງຮຽນພອນສະຫວັນ ແລະຊົນເຜົ່າກຽມມະຫາວິທະຍາໄລ ແລະຕົວແທນຈາກພາກສ່ວນຕ່າງໆພາຍໃນ ມຊ ເຊົ້າຮ່ວມ.
         ໃນທີ່ປະຊຸມ, ທ່ານ ຮສ. ປອ ບຸນລ້ວນ ດ້ວງເງິນ ຜູ້ອໍານວຍການ ສະຖາບັນພັດທະນາຊັບພະຍາກອນມະນຸດ ລາວ-ຢີປຸ່ນ ໄດ້ຜ່ານປະຫວັດຄວາມເປັນມາ ແລະລາຍງານສະພາບຂອງການຈັດຕັ້ງປະຕິບັດວຽກງານ, ການຈັດຕັ້ງການຮຽນ-ການສອນ
        ແລະຜ່ານທິດທາງແຜນການເຄື່ອນໄຫວທາງດ້ານການພັດທະນາການສຶກສາໃນຕໍ່ໜ້າຂອງ ສະຖາບັນພັດທະນາຊັບພະຍາກອນມະນຸດລາວ-ຢີປຸ່ນ ຕໍ່ທີ່ປະຊຸມ. ຈາກນັ້ນ ທ່ານ ຮສ. ປອ ບົວດໍາ ແສງຄໍາຄຸດລາວົງ ຫົວໜ້າຫ້ອງການ ມຊ ໄດ້ຂຶ້ນຜ່ານບົດລາຍງານ
        ແລະຜົນສໍາເລັດ ໃນການຈັດຕັ້ງປະຕິບັດວຽກງານທົ່ວ ມຊ ປະຈໍາ ເດືອນ ມັງກອນ 2021 ແລະຜ່ານແຜນການເຄື່ອນໄຫວ ປະຈໍາເດືອນ ກຸມພາ 2021 ຂອງ ມຊ ຕໍ່ທີ່ປະຊຸມ. ໃນທີ່ປະຊຸມໄດ້ມີການສົນທະນາແລກປ່ຽນຄວາມຄິດເຫັນ ໃສ່ບົດສະຫຼຸບປະຈໍາເດືອນ
        ມັງກອນ 2021 ແລະປະກອບຄໍາຄິດເຫັນໃສ່ແຜນການເຄື່ອນໄຫວ ປະຈໍາ ເດືອນ ກຸມພາ ໃຫ້ມີຄວາມອຸດົມສົມບູນ ແລະສອດຄ່ອງກັບໜ້າວຽກຕົວຈິງຂອງແຜນການຈັດຕັ້ງປະຕິບັດ.
    </string>
    <string name="p2">"ຄະນະບໍລິຫານງານຊາວໜຸ່ມ ປະຊາຊົນ ປະຕິວັດລາວ (ຄຊປປລ)ມະຫາວິທະຍາໄລແຫ່ງຊາດ (ມຊ) ໄດ້ຈັດກອງປະຊຸມສ່ອງແສງ ໄຕມາດ IV ແລະຜ່ານແຜນການເຄື່ອນໄຫວວຽກງານໄຕມາດ I  ປະຈໍາປີ 2021, ກອງປະຊຸມດັ່ງກ່າວ, ໄດ້ຈັດຂຶ້ນໃນຕອນບ່າຍ ວັນທີ 29 ມັງກອນ 2021 ນີ້, ທີ່ຫ້ອງປະຊຸມ ຄະນະຊັບພະຍາກອນນ້ຳ(ຄຊນ) ໂດຍການເປັນປະທານຂອງ ສະຫາຍສີສຸພັນ ພົມມະນີວົງ ເລຂາ ຄຊປປລ, ໃຫ້ກຽດເຂົ້າຮ່ວມໂດຍສະຫາຍ ຮສ. ໂພສີ ທິບດາວັນ ຄະນະປະຈໍາພັກ, ຮອງອະທິການບໍດີ, ຜູ້ຊີ້ນໍາວຽກງານ 3 ອົງການຈັດຕັ້ງມະຫາຊົນ ມຊ, ມີສະຫາຍ ຄໍາໝູນ ອັກຄະໄຊ ຄະນະພັກຮາກຖານ ຄຊນ,  ມີບັນດາເລຂາຊາວໜຸ່ມ 17 ຮາກຖານທົ່ວ ມຊ ແລະຕົວແທນຊາວໜຸ່ມທີ່ເປັນນັກສຶກສາ ຄຊນ ເຂົ້າຮ່ວມ.         ໃນກອງປະຊຸມ, ສະຫາຍ ປອ. ວິໄລສັກ ສີໂຄດວົງສາ ຄະນະບໍລິຫານງານຊາວໜຸ່ມກະຊວງສຶກສາທິການ ແລະກີລາ, ຮອງເລຂາຄະນະບໍລິຫານງານຊາວໜຸ່ມ ມຊ ໄດ້ຜ່ານບົດສະຫຼຸບວຽກງານການເຄື່ອນໄຫວຂອງ ຄຊປປລ, ມຊ ໃນໄຕມາດ IV  ປະຈໍາປີ 2020 ເຊິ່ງ ຊປປລ, ມຊ ໄດ້ມີຜົນງານພົ້ນເດັ່ນຫຼາຍດ້ານຄື: ໄດ້ເລື່ອນສະມາຊິກພັກສໍາຮອງຂຶ້ນເປັນສະມາຊິກພັກສົມບູນຈໍານວນ 8 ສະຫາຍ, ຍິງ 5 ສະຫາຍ, ລົງເຜີຍແຜ່ກົດລະບຽບ ແລະກົດຫມາຍຊາວໜຸ່ມໃຫ້ແກ່ນັກສຶກສາ ປີ 1 – 4 ໂດຍມີຜູ້ຕາງຫນ້າເຂົ້າຮ່ວມ 250 ສະຫາຍ, ຍິງ 125 ສະຫາຍ, ເຂົ້າຮ່ວມຮັບຟັງປາຖະກະຖາ ຂອງທ່ານ ສົມສະຫວາດ ເລັ່ງສະຫວັດ ອະດີດກໍາມະການກົມການເມືອງສູນກາງພັກ, ອະດີດຮອງນາຍົກລັດຖະມົນຕີ ເນື່ອງໃນວັນສະຖາປະນາ ສປປ ລາວ ແລະວັນເກີດ ປະທານ ໄກສອນ ພົມວິຫານ ໃນຄັ້ງວັນທີ 15 ທັນວາ 2020 ທີ່ ມຊ, ຈໍານວນ 800 ສະຫາຍ,  ຄະນະບໍລິຫານງານພ້ອມດ້ວຍສະມາຊິກຊາວໜຸ່ມ ຈຳນວນ 1.658 ສະຫາຍ ໄດ້ເຂົ້າຮ່ວມວຽກການເຄົາລົບທຸງທຸກວັນຈັນ ຈຳນວນ 12 ຄັ້ງ, ໄດ້ເຂົ້າຮ່ວມການບໍລິຈາກເລືອດແບບພິເສດຈໍານວນ 158 ສະຫາຍ, ໄດ້ເຝິກອົບຮົມຜູ້ປະກອບການແບບອອນລາຍ ທີ່ສະຖານທູດອິນເດຍ ຈໍານວນ 4 ສະຫາຍ, ໄດ້ລົງເຜີຍແຜ່ໂຄງການ YSTIF 2020  (Young  Scientists Technology and Innovator Forums 2020) ໄດ້ 3 ຄັ້ງ ມີສະມາຊິກຊາວໜຸ່ມຄູອາຈານ ແລະນັກສຶກສາ ເຂົ້າຮ່ວມທັງໝົດ 18 ສະຫາຍ, ເຂົ້າຮ່ວມກອງປະຊຸມທາງໄກແບບອອນລາຍ ພາຍໃຕ້ໂຄງການ G-DORM (ມະຫາວິທະນາໄລນີກາຕະ ປະເທດຍີ່ປຸ່ນ) ຈໍານວນ 02 ສະຫາຍ, ໄດ້ລະດົມທຶນຊ່ວຍເຫຼືອປະຊາຊົນປະສົບໄພນ້ຳຖ້ວມ  ບ້ານແກ້ງແປ, ບ້ານແກ້ງຄຳ, ມ.ເຊໂປນ, ຂ.ສະຫວັນນເຂດ, ລວມເປັນມູນຄ່າທັງໝົດ 4.140.000 ກີບ, ໄດ້ສົມທົບກັບອົງການຈັດຕັ້ງມະຫາຊົນຮາກຖານ ໄດ້ມອບເຄື່ອງນຸ່ງ ແລະເງິນສົດ ຊ່ວຍເຫຼືອໂຮງຮຽນທຸກຍາກທີ່ຢູ່ຫ່າງໄກສອກຫຼີກ ທີ່ເມືອງກະລຶມ ແຂວງເຊກອງ ລວມເປັນມູນຄ່າ 7.214.000 ກີບ, ສະມາຊິກຊາວໜຸ່ມໄດ້ຮັບ ປະກາສະນີຍະບັດກຽດນິຍົມຮຸ່ນທີ 20 ປະຈໍາສົກສຶກສາ 2016-2020 ຈໍານວນ 47 ນ້ອງ ແລະອື່ນໆ.   "</string>
    <string name="about">ສຳນັກງານໃຫ່ຍ</string>
    <string name="txtabout">ບ້ານ ດົງໂດກ ເມືອງໄຊທານີ,\n
        ນະຄອນຫຼວງວຽງຈັນ ສ.ປ.ປ.ລາວ \n
        ຕິດຕໍ່ພົວພັນ ໂທ:+856 (21) 770070\n
        ແຟັກ:+856 (21) 770070 \n
        ອີເມວ: 	fos.nuol.edu.la</string>
    <string name="infotito">ສາມາດສອບຖາມ ແລະ ຕິດຕໍ່ພວກເຮົາໄດ້ຕາມຂໍ້ມູນລຸ່ມນີ້ \n
        ບ້ານດົງໂດກ +856 (21) 770070 \n
        +856 (21) 770070  \n
        	http://fos.nuol.edu.la</string>
</resources>