<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0052cc"
    tools:context=".ui.notifications.NotificationsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="25dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/structure"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/structture"
                android:layout_margin="12dp"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <ImageView
                android:id="@+id/imagestructure"
                android:layout_width="351dp"
                android:layout_height="181dp"
                android:layout_marginBottom="50dp"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/stuture"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="351dp"
                android:layout_height="181dp"
                android:layout_marginTop="12dp"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/history"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title"
                android:textColor="#FFFFFF"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_margin="12dp"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explain"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/extract"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vivion"
                android:layout_margin="12dp"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_gravity="center"

                />

            <TextView
                android:id="@+id/textvision"
                android:layout_margin="12dp"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descript_vision"
                />

            <TextView
                android:id="@+id/mission"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission"
                android:layout_margin="12dp"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_gravity="center"

                />

            <TextView
                android:id="@+id/textvisions"
                android:layout_margin="12dp"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descript_mission"
                />
            <TextView
                android:id="@+id/tito"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ຕິດຕໍ່ພົວພັນ "
                android:layout_margin="12dp"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_gravity="center"

                />
            <TextView
                android:id="@+id/imfortito"
                android:layout_margin="12dp"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/infotito"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"/>



        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>