<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0052cc"
    tools:context=".Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="731dp">

        <TextView
        android:gravity="center"
        android:id="@+id/textView2"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tex" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/Phone"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:gravity="center"
        android:id="@+id/textView4"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:text="@string/sakham"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:gravity="center"
        android:id="@+id/tex"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:text="@string/birth"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="109dp"
        android:layout_height="143dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:background="@drawable/head_emerald"/>

    <ImageView
        android:id="@+id/postprofile"
        android:layout_width="66dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"

        app:layout_constraintBottom_toBottomOf="@+id/image"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image"
        app:layout_constraintVertical_bias="0.548"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/username"
        android:layout_width="210dp"
        android:layout_height="37dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/tagedite_round"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.983"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@+id/userid"
        android:layout_marginRight="16dp" />

    <EditText
        android:id="@+id/userid"
        android:layout_width="210dp"
        android:layout_height="37dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/tagedite_round"
        android:ems="10"
        android:hint="@string/userid"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/tagedite_round"
        android:ems="10"
        android:hint="ອີເມວ"
        android:inputType="textEmailSubject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/birthday" />

    <EditText
        android:id="@+id/password"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/tagedite_round"
        android:hint="ລະຫັດ"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/major"
        android:layout_marginRight="4dp" />

    <EditText
        android:id="@+id/major"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/tagedite_round"
        android:hint="ສາຂາ"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/number" />

            <Button
                android:id="@+id/register"
                android:layout_width="137dp"
                android:layout_height="48dp"
                android:background="@drawable/rount_boer"
                android:text="@string/register"
                android:textColor="#FFF"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.536"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.704" />

            <TextView
                android:id="@+id/cancel"
                android:layout_width="138dp"
                android:layout_height="51dp"
                android:gravity="center_horizontal"
                android:onClick="Login"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.534"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.811" />

            <EditText
        android:id="@+id/birthday"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/tagedite_round"
        android:ems="10"
        android:hint="@string/year"
        android:inputType="datetime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/tex"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:gravity="center"
        android:id="@+id/textView"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:text="@string/Password"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/number"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/tagedite_round"
        android:ems="10"
        android:hint="ເບີໂທ"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/email" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>